[package]
name = "odoo-api-macros"
version = "0.1.0"
authors = ["Ryan Cole <hello@ryanc.me>"]
description = "Macros for the `odoo-api` crate"
repository = "https://github.com/ryanc-me/odoo-api-rs"
homepage = "https://github.com/ryanc-me/odoo-api-rs"
documentation = "https://docs.rs/odoo-api-macros"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
categories = []
keywords = []
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6.0"
