[package]
name = "odoo-api"
version = "0.1.0"
authors = ["Ryan Cole <hello@ryanc.me>"]
description = "Type-safe and full-coverage implementation of the Odoo API. Supports async, blocking, and bring-your-own-requests"
repository = "https://github.com/ryanc-me/odoo-api-rs"
homepage = "https://github.com/ryanc-me/odoo-api-rs"
documentation = "https://docs.rs/odoo-api"
include = ["build.rs", "src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
keywords = ["odoo", "jsonrpc", "json-rpc", "api"]
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
odoo-api-macros = { path = "../odoo-api-macros" }
rand = { version = "0.8.5", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
# By default, only the base types implementation is exposed
default = ["nonblocking", "blocking"]

# Include async Reqwest support
nonblocking = ["reqwest"]

# Include blocking Reqwest support
blocking = ["reqwest", "reqwest/blocking"]
