[package]
name = "odoo-api"
version = "0.1.3"
authors = ["Ryan Cole <hello@ryanc.me>"]
description = "Type-safe and full-coverage implementation of the Odoo API. Supports async, blocking, and bring-your-own-requests"
repository = "https://github.com/ryanc-me/odoo-api-rs"
homepage = "https://github.com/ryanc-me/odoo-api-rs"
documentation = "https://docs.rs/odoo-api"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
categories = ["api-bindings", ]
keywords = ["odoo", "jsonrpc", "json-rpc", "api"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5.0"
serde_json = "1.0"
thiserror = "1.0"
rand = { version = "0.8.5" }
reqwest = { version = "0.11", features = ["json"], optional = true }
odoo-api-macros = "0.1"

[features]
# By default, only the base types implementation is exposed
default = []

# Include async Reqwest support
async = ["reqwest"]

# Include blocking Reqwest support
blocking = ["reqwest", "reqwest/blocking"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg"]
